# rtmp-switcher

./: .envrc  .gitignore  AUTHORS  Cargo.toml  Dockerfile  LICENSE  README.md  build_gst_plugins.sh
src/: http.rs  input.rs  lib.rs  main.rs  mixer.rs  output.rs
src/http/: filters.rs  handlers.rs  input.rs  mixer.rs  mod.rs  output.rs
src/input/: fake.rs  mod.rs  test.rs  uri.rs
src/mixer/: error.rs  input.rs  mod.rs  output.rs
src/output/: auto.rs  fake.rs  file.rs  mod.rs  rtmp.rs
