[package]
name = "switcher"
version = "0.1.0"
authors = ["Erik St. Martin <alakriti@gmail.com>"]
edition = "2018"

[dependencies]
gstreamer = { version = "0.16.3", features = ["v1_14"]}
gstreamer-video = "0.16.3"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
