[package]
name = "switcher"
version = "0.1.0"
authors = ["Erik St. Martin <alakriti@gmail.com>"]
edition = "2018"

[dependencies]
gstreamer = { version = "0.16.3", features = ["v1_14"]}
gstreamer-video = "0.16.3"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
