[package]
name = "switcher"
version = "0.1.0"
authors = ["Erik St. Martin <alakriti@gmail.com>"]
edition = "2018"

[dependencies]
gstreamer = { version = "0.16.3", features = ["v1_14"]}
gstreamer-video = "0.16.3"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
eyre = "0.6.0"
clap = "2.33.3"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
